Changelog
=========

4.0a1 - unreleased
------------------

- Change the language selector viewlet to be shown in the IPortalHeader manager
  to be consistent with the new default location in Plone 4. This closes
  http://plone.org/products/linguaplone/issues/248.
  [hannosch]

- Require at least Zope 2.12.5 and remove the `-C` work around.
  [hannosch]

- Renamed migrations module to upgrades to match current nomenclature.
  [hannosch]

- Removed Archetypes uid and reference catalog GenericSetup handlers. These
  are part of Archetypes now.
  [hannosch]

- Removed Plone 3.3 specific tests.
  [hannosch]

- Added tests for all upgrade steps.
  [hannosch]

- Removed all dependencies on zope.app packages.
  [hannosch]

- Specify all package dependencies.
  [hannosch]

- Added dependency on Plone 4. Please use a release from the 3.x series if
  you are using Plone 3.
  [hannosch]

3.1 - 2010-07-28
----------------

- No changes.

3.1b1 - 2010-07-18
------------------

- Update license to GPL version 2 only.
  [hannosch]

- If catalog filter attributes contain "Language", and "Language" is
  set to all, don't add Language filters to the REQUEST object
  [do3cc]

3.1a5 - 2010-06-22
------------------

- Use a normal FieldIndex in the uid_catalog and correct custom setuphandler
  to create a functional FieldIndex.
  [hannosch]

3.1a4 - 2010-06-18
------------------

- Removed example types, Plone's default types are LinguaPlone aware and
  provide a good demo of the functionality.
  [hannosch]

- Refactored tests and conform to PEP8 in more places.
  [hannosch]

- Changed the default index used for Language to be a normal FieldIndex. For
  most sites this is sufficient and avoids the major performance hit the
  LanguageIndex brings with it.
  [hannosch]

- Refactor selector code to make it easier to write unit tests for it.
  [hannosch]

- Added development information to README, this closes
  http://plone.org/products/linguaplone/issues/242.
  [hannosch]
